syntax = "proto3";

option java_multiple_files = true;
option java_package = "mafia.server.lobby.protocol.common";

message UserInfo {
  int64 accountId = 1;
}

message RoomInfo {
  string roomId = 1;
  string title = 2;
  int32 member_count = 3;
}